--- a/package.json
+++ b/package.json
@@ -7,27 +7,28 @@
     "license": "AGPL-version-3.0",
     "private": false,
     "engines": {
-      "node": ">= 14.0.0",
-      "npm": ">= 6.0.0"
+        "node": ">= 14.0.0",
+        "npm": ">= 6.0.0"
     },
     "homepage": "",
     "repository": {
-      "type": "git",
-      "url": ""
+        "type": "git",
+        "url": ""
     },
     "bugs": "",
     "keywords": [],
     "author": {
-      "name": "",
-      "email": "",
-      "url": ""
+        "name": "",
+        "email": "",
+        "url": ""
     },
     "contributors": [],
     "scripts": {
-      "dev": "",
-      "test": ""
+        "dev": "",
+        "test": ""
     },
     "dependencies": {
-      "express": "^4.21.1"
+        "": "file:",
+        "express": "^4.21.1"
     }
-  }
+}
