--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Gemini",
+  "name": "",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -18,7 +18,7 @@
   "bugs": "",
   "keywords": [],
   "author": {
-    "name": "Kleiton Ewerton",
+    "name": "",
     "email": "",
     "url": ""
   },
@@ -29,7 +29,11 @@
   },
   "dependencies": {
     "": "file:",
+    "@google/generative-ai": "^0.21.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mongodb": "^6.10.0"
+    "mongodb": "^6.11.0",
+    "multer": "^1.4.5-lts.1"
   }
 }
